appId: org.nativescript.examplesApp
---
- launchApp:
    permissions:
      android.permission.DUMP: allow
- waitForAnimationToEnd
- openLink: ns-examples://enableDemoMode
- runScript: animation_origin.js
- runFlow:
    when:
      platform: android
    commands:
      - evalScript: ${output.platform = 'android'}
- runFlow:
    when:
      platform: ios
    commands:
      - evalScript: ${output.platform = 'ios'}

- openLink: ns-examples://navigate/ViewOrigin
- startRecording: ../content/assets/videos/animation_origin_${output.platform}
- repeat:
    while:
      true: ${(output.current = output.origins.shift()) !== undefined}
    commands:
      - tapOn: 
          text: ${output.current}
          retryTapIfNoChange: false
      - tapOn:
          text: 'Play'
          retryTapIfNoChange: false
      - waitForAnimationToEnd:
          timeout: 5000
- tapOn: '1 / 1' # just to delay the recording stop
- stopRecording
- openLink: ns-examples://disableDemoMode
